rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__file_info_header_bytes_text_mode_cjk_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
assertion_line: 91
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌File Information──────────────────────────────────────────────────────┐                        ",
        "                        │  Name     notes_ja.txt                                               │                        ",
        "                        │  Path     /test/documents/notes_ja.txt                               │                        ",
        "                        │  Size     2.0 KB (2048 bytes)                                        │                        ",
        "                        │  Type     File                                                       │                        ",
        "                        │                                                                      │                        ",
        "                        │  Created  N/A                                                        │                        ",
        "                        │  Modified [TIMESTAMP]                                        │                        ",
        "                        │  Accessed N/A                                                        │                        ",
        "                        │                                                                      │                        ",
        "                        │  Detected type: Unknown / plain text                                 │                        ",
        "                        │  こんにちは世界                                                      │                        ", // hidden by multi-width symbols: [(28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " ")]
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │  Enter/Esc: close  t: toggle hex/text                                │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 41, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 30, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 34, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 38, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 40, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 27, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
